# semindex

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  TEST_WORKFLOW.md  docker-compose.yml  e2e_test.py  indexing_test.txt  pyproject.toml  requirements.txt  sample.config.toml  test_ai_planning.py  test_discovery.py  test_elasticsearch.py  test_plan.json  wiki_gen_test.txt
.github/: dependabot.yml
.github/workflows/: dependency-check.yml
.semindex/: index.faiss  semindex.db
docs/: BENCHMARKING.md  CHANGELOG.md  GEMINI.md  IMPLEMENTATION_NOTES.md  PERFORMANCE_ENHANCEMENTS.md  PERFORMANCE_IMPROVEMENTS.md  QWEN.md  RELEASE_NOTES_v0.4.2.md  RELEASE_SUMMARY.md  ROADMAP.md  TEST_WORKFLOW.md  ollama_integration.md
sample_project/: test_module.py
scripts/: debug_parse.py  gen_docs.py  run_benchmarks.py
src/: core_implementation.py  requirements_analysis.py  system_design.py
src/semindex/: __init__.py  ai.py  ai_implementation_assistant.py  ast_py.py  benchmark.py  cache.py  chunker.py  cli.py  component_generator.py  config.py  context_enhancer.py  context_generator.py  context_watcher.py  crawler.py  development_workflow.py  distributed_processor.py  doc_search.py  docs_indexer.py  embed.py  (+21 more)
tests/: e2e_test.py  test_ai_planning.py  test_ast.py  test_autoplan.py  test_cli.py  test_cli_ollama.py  test_config.py  test_crawler.py  test_discovery.py  test_gen_docs_cli.py  test_hybrid_search.py  test_incremental_indexing.py  test_javascript_adapter.py  test_languages.py  test_ollama.py  test_perplexica_integration.py  test_rag_ollama.py  test_semantic_chunking.py
(+12 files in other folders)
