[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semindex"
version = "0.4.2"
description = "Local semantic codebase indexer (Python-only, CPU-only)"
authors = [{ name = "OpenSource Syndicate" }]
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "faiss-cpu==1.8.0",
    "transformers==4.44.2",
    "torch==2.4.0",
    "sentencepiece==0.2.0",
    "tqdm==4.66.5",
    "numpy==1.26.4",
    "elasticsearch==8.15.0",
    "sentence-transformers==5.1.1",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "html2text==2024.2.26",
    "toml>=0.10.2",
    "llama-cpp-python>=0.3.16",
    "colorama>=0.4.6",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
languages = [
    "tree-sitter>=0.20",
    "tree-sitter-languages>=1.10",
]

[project.scripts]
semindex = "semindex.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
languages = [
    "tree-sitter==0.20.1",
    "tree-sitter-languages==1.10.2",
]
